# mafia-gpt

./: README.md  config.py  pyproject.toml
mafia/: game.py
